# data-intelligence-mcp-server

./: .bobmodes  .env  .env.example  .gitignore  .oss-syncignore  CHANGELOG.md  MANIFEST.in  Makefile  Makefile.local  PRIVACY.md  README.md  SERVER_HTTPS.md  SKILLS_REFERENCE.md  TOOLS.md  TOOLS_PROMPTS.md  build_version.txt  development.md  manifest.json  pyproject.toml  requirements.txt
.github/prompts/: lineage-impact-analysis.prompt.md
.github/workflows/: auto-tag-and-release.yml  publish-to-pypi.yaml
PROMPTS_SAMPLES/: README.md
PROMPTS_SAMPLES/search/: search_assets_prompt.md
PROMPTS_TEMPLATE_SAMPLES/: README.md
PROMPTS_TEMPLATE_SAMPLES/lineage/: impact_analysis_prompt.md
PROMPTS_TEMPLATE_SAMPLES/system/: tool_usage_guide.md
app/: main.py  post_install.py
app/core/: auth.py  middleware.py  registry.py  settings.py
app/services/: constants.py  stubs.py  system_prompts.py  tool_utils.py
app/services/connections/: manifest.yaml
app/services/data_product/: constants.py  manifest.yaml
app/services/data_protection_rules/: manifest.yaml
app/services/data_quality/: manifest.yaml
app/services/glossary/: __init__.py  constants.py  manifest.yaml  prompts.py  utils.py
app/services/lineage/: constants.py  manifest.yaml  utils.py
app/services/metadata_enrichment/: constants.py  manifest.yaml
app/services/metadata_import/: manifest.yaml
app/services/projects/: manifest.yaml
app/services/reporting/: manifest.yaml
app/services/search/: constants.py  manifest.yaml
app/services/search_assets/: manifest.yaml
app/services/text_to_query_search/: __init__.py  constants.py  manifest.yaml
app/services/text_to_sql/: manifest.yaml
app/services/user_search/: __init__.py  manifest.yaml
app/services/workflow/: manifest.yaml
app/shared/: agent_constants.py  constants.py
app/shared/exceptions/: base.py
app/shared/logging/: constants.py
app/shared/models/: __init__.py  base_response.py  ssl_config.py
app/shared/ui_message/: interrupt.py  noop_ui_message_strategy.py  ui_agentic_utils.py  ui_message_context.py  ui_message_strategy.py  utils.py
app/shared/utils/: __init__.py  client_detection.py  crn_validator.py  helpers.py  http_client.py  http_constants.py  llm_utils.py  retry_utils.py  tool_helper_service.py  utils_tools.py
client/: mcp_client.py
readme_guides/: DEV_PACKAGE_SHARING.md  GLOSSARY_CSV_IMPORT.md  SSL_CERTIFICATE_GUIDE.md  WORKFLOW_SERVICES_GUIDELINES.md
scripts/: manage.py
skills/data-product-creation/: SKILL.md
skills/data-product-creation/templates/: README.md  assets_manifest_asset_based.json  assets_manifest_url_based.json  (+5 more)
skills/lineage/: SKILL.md
skills/onboard-and-enrich/: SKILL.md
(+182 files in other folders)
