[project]
name = "ibm-watsonx-data-intelligence-mcp-server"
version = "1.1.0"
description = "MCP Server implementation for IBM Data Intelligence"
readme = "readme_guides/README_PYPI.md"
license = "Apache-2.0"
authors = [
    { name = "Ramakanta Samal", email = "rsamal@us.ibm.com" },
    { name = "Mithun", email = "vbmithun@in.ibm.com" },
    { name = "Neeru Gupta", email = "guptaneeru@us.ibm.com" },
    { name = "Tomasz Hanusiak", email = "t.hanusiak@pl.ibm.com" },
    { name = "Bartłomiej Chwast", email = "Bartlomiej.Chwast@ibm.com" },
    { name = "Robin Jose", email = "robincjose@in.ibm.com" },
    { name = "Austin Joyal", email = "austin.joyal@ibm.com" },
    { name = "Megha Varshney", email = "Megha.Varshney@ibm.com" },

]
keywords = [
    "mcp",
    "model-context-protocol",
    "server",
    "ai",
    "fastmcp",
    "watsonx-data-intelligence",
    "ibm",
    "watsonx",
    "data-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "pydantic>=2",
    "pyyaml>=6",
    "PyJWT>=2.12.0",
    "aiocache>=0.12.3",
    "tenacity>=9.0.0",
    "sqlglot>=27.20.0",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "pypdfium2>=4.30.0",
    "requests>=2.33.0",
    "cryptography>=46.0.7",
    "authlib>=1.7.1",
    "python-multipart>=0.0.27",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "urllib3>=2.7.0"
]

[project.urls]
"Homepage" = "https://github.com/ibm/data-intelligence-mcp-server"
"Bug Reports" = "https://github.com/ibm/data-intelligence-mcp-server/issues"
"Source" = "https://github.com/ibm/data-intelligence-mcp-server"
"Documentation" = "https://github.com/ibm/data-intelligence-mcp-server"

[project.scripts]
ibm-watsonx-data-intelligence-mcp-server = "app.main:main"
wxdi-setup-skills = "app.post_install:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "skills*"]
exclude = ["tests*", "client*", "scripts*"]

[tool.setuptools.package-data]
"skills" = ["**/*"]
"*" = ["*.md"]

[project.optional-dependencies]
dev = ["ruff>=0.12.10"]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = ["build>=1.3.0", "twine>=6.2.0"]
